Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16386

Handle mkfs.lustre --version correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Running mkfs.lustre with --version or -V argument fails instead of printing the version.

      Output:

       

      $ ./lustre/utils/mkfs.lustre --version
      usage: mkfs.lustre <target type> [--backfstype=ldiskfs] --fsname=<filesystem name>
          --index=<target index> [options] <device>
          <device>:block device or file (e.g /dev/sda or /tmp/ost1)
          target types:
              --mgs: configuration management service
              --nomgs: turn off MGS service on this MDT
              --mdt: metadata storage, mutually exclusive with ost
              --ost: object storage, mutually exclusive with mdt, mgs
          options (in order of popularity):
              --index=#N: numerical target index (0..N)
                  required for all targets other than the MGS,
                  target index may either be a decimal number or
                  hexadecimal number starting with '0x'
              --fsname=<8_char_filesystem_name>: fs targets belong to
                  required for all targets other than MGS
              --mgsnode=<nid>[,<...>]: NID(s) of remote MGS
                  required for all targets other than MGS
              --mountfsoptions=<opts>: permanent Lustre mount options
              --backfs-mount-opts=<opts>: backing fs mount options
              --failnode=<nid>[,<...>]: NID(s) of backup failover node
                  mutually exclusive with --servicenode
              --servicenode=<nid>[,<...>]: NID(s) of service partners
                  treat nodes as equal service node, mutually exclusive with --failnode
              --param <key>=<value>: set a permanent parameter
                  e.g. --param sys.timeout=40
                       --param lov.stripesize=2M
              --network=<net>[,<...>]: restrict OST/MDT to network(s)
              --backfstype=<fstype>: backing fs type (ldiskfs, zfs)
              --device-size=#N(KB): device size for loop devices
              --mkfsoptions=<opts>: format options
              --reformat: overwrite an existing disk
              --replace: replace an old target with the same index
              --stripe-count-hint=#N: for optimizing MDT inode size
              --comment=<user comment>: arbitrary string (824 bytes)
              --dryrun: report what we would do; don't write to disk
              --verbose: e.g. show mkfs progress
              --force-nohostid: Ignore hostid requirement for ZFS import
              -V|--version: output build version of the utility and
                  exit
              --quiet
      

       

       

      Expected output:

       

      $ ./lustre/utils/mkfs.lustre --version
      mkfs.lustre <version>
      

       

            arshad512 Arshad Hussain
            arshad512 Arshad Hussain
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: